docs: clarify keystatic github app vars

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ NODE_ENV=production
 KEYSTATIC_SECRET=
 KEYSTATIC_GITHUB_CLIENT_ID=
 KEYSTATIC_GITHUB_CLIENT_SECRET=
+PUBLIC_KEYSTATIC_GITHUB_APP_SLUG=
 
 # Notes:
 # - Set these in Cloudflare Pages → Settings → Environment variables (Production + Preview).
